[gd_scene load_steps=4 format=3 uid="uid://bfxek44m8du8k"]

[ext_resource type="Texture2D" uid="uid://c1icm337leqt7" path="res://assets/sprites/ui/buttons/blank-card.png" id="1_6023p"]
[ext_resource type="Script" uid="uid://kb8pubr84ig3" path="res://source/menus/menu_widgets/save_slot.gd" id="1_nc273"]
[ext_resource type="Texture2D" uid="uid://lh3dna1fipe" path="res://assets/sprites/ui/icons/close.png" id="2_nc273"]

[node name="SaveSlot" type="Control"]
custom_minimum_size = Vector2(137, 220)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_nc273")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CardContainer" type="Control" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(105, 150)
layout_mode = 2
size_flags_horizontal = 4

[node name="Card" type="TextureRect" parent="MarginContainer/VBoxContainer/CardContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(105, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -75.0
offset_right = 52.5
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6023p")
expand_mode = 3
stretch_mode = 5

[node name="CardLabel" type="Label" parent="MarginContainer/VBoxContainer/CardContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -25.5
offset_right = 20.0
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"SmallLabel"
text = "Slot
Empty"
horizontal_alignment = 1

[node name="SlotLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Slot #1"

[node name="Delete" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 50.0
grow_horizontal = 0
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(50, 0)
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("2_nc273")
stretch_mode = 5
